GH-458 Downgrade to Kotlin 1.5.21